# CLProtocol_cred2

./: CMakeLists.txt  Makefile  README.md
include/: clprotocol_cred2.h  clprotocol_cred2_xml.h
scripts/: gen_embed_xml.sh
share/: C-RED2_GenApi.xml  C-RED2_SFNC_MAPPING.md  CLPROTOCOL_v1_2_COMPLIANCE.md
src/: clprotocol_cred2.cpp  clprotocol_cred2_test.cpp
